Version 1.5.2 (Alan Ezust)
- Fixed plugin-bug #1153 Sessions does not work with multiple views / buffersets:

VERSION 1.5.1 (Steve Jakob)
- fixed bug (#2872914) using patch (#2886196) submitted by Steve Gough, where Unicode characters in file names were interpreted incorrectly when restoring a session

VERSION 1.5.0 (Steve Jakob)
- added a property in the Sessions plugin options to specify the maximum number of entries for the session switcher combo
- removed calls to deprecated methods

VERSION 1.4.3 (Steve Jakob)
- incorporated code submitted by halyavin (patch #2006663) to change XML parser from Microstar's AElfred parser to the SAX parser provided by jEdit's XMLUtilities class (bugs 1992191 and 2046470)
- changed SessionManager class to use the View.updateTitle() method to update the title bar, rather than sending a message on the EditBus

VERSION 1.4.2 (Steve Jakob)
- incorporated code submitted by strank (patch #1697914) to fix bug where current file was not being saved on Windows

VERSION 1.4.1 (Davide Del Vento, Steve Jakob)
- fixed bug (#1724376) the code submitted by strank conflicted with the behaviour of save confirmation dialog
- minor improvements in the save confirmation dialog (ask only if there are changes and show two separate lists)
- removed calls to deprecated jEdit MiscUtilities classes/methods

VERSION 1.4.0 (Steve Jakob)
- show more sessions in the SessionManagerDialog (based on code submitted by SourceForge user strank)
- retain file character encoding when saving/retrieving sessions
- retain carat position in each file when saving/retrieving sessions

VERSION 1.3.0 (Steve Jakob)
- added the option to display a confirmation dialog prior to session autosave (based on code submitted by Davide Del Vento)

VERSION 1.2.3 (Steve Jakob)
- fixed bug (#806606) where "\u" in a Windows directory path would get replaced with "\\" each time the session was switched, causing the path to get increasingly long