@@ -4,6 +4,8 @@
 
 plugin.sessions.SessionsPlugin.activate=startup
 plugin.sessions.SessionsPlugin.name=Sessions
+plugin.sessions.SessionsPlugin.usePluginHome=true
+
 plugin.sessions.SessionsPlugin.author=Dirk Moebius (former), Steve Jakob
 plugin.sessions.SessionsPlugin.version=1.5.2
 plugin.sessions.SessionsPlugin.description=A plugin to manage lists of open files and switch between them.
