@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>Sessions Plugin</TITLE>
+<TITLE>jEdit Sessions Plugin</TITLE>
 </HEAD>
 
 <BODY BGCOLOR="#FFFFFF">
@@ -10,11 +10,13 @@
        WIDTH="100%">
   <TR>
     <TD>
-      <H1>Sessions Plugin</H1>
+      <H1>jEdit Sessions Plugin</H1>
+      
     </TD>
     <TD ALIGN="right">
         <SMALL>By Dirk M&ouml;bius<BR>
         <A HREF="mailto:dmoebius@gmx.net"><EM>dmoebius@gmx.net</EM></A>
+        <p> $Date$ </p>
         </SMALL>
     </TD>
   </TR>
@@ -22,11 +24,11 @@
 
 
 <UL>
-    <LI><A HREF="#general">Introduction</A>
-    <LI><A HREF="#sessionmanagement">Session Management</A>
-    <LI><A HREF="#customization">Customization</A>
-    <LI><A HREF="#license">License</A>
-    <LI><A HREF="#feedback">Feedback</A>
+    <LI><A HREF="#general">Introduction</A> </LI>
+    <LI><A HREF="#sessionmanagement">Session Management</A> </LI>
+    <LI><A HREF="#customization">Customization</A> </LI>
+    <LI><A HREF="#license">License</A> </LI>
+    <LI><A HREF="#feedback">Feedback</A> </LI>
 </UL>
 
 
@@ -46,7 +48,7 @@ The Sessions Plugin maintains lists of open files - called <EM>sessions</EM>
 
 <P>
 The following menu actions are available in menu <B>Plugins&gt;Sessions</B>:
-<P>
+</P>
 
 <UL>
 	<LI><B>Manage Sessions...</B><BR/>
@@ -103,12 +105,12 @@ The following options are available:
 </P>
 
 <UL>
-	<LI><B>Autosave Sessions</B>
+	<LI><B>Autosave Sessions</B> </LI>
 	<UL>
 		<LI><B>Display "Confirm Save" dialog</B></LI>
 	</UL>
-	<LI><B>Close all files before switching to new session</B>
-	<LI><B>Show Session Switcher toolbar</B>
+	<LI><B>Close all files before switching to new session</B> </LI>
+	<LI><B>Show Session Switcher toolbar</B>  
 	<UL>
 		<LI><B>Show below JEdit's main toolbar</B></LI>
 		<LI><B>Show inside JEdit's main toolbar (at the end)</B></LI>
@@ -118,6 +120,7 @@ The following options are available:
 		</LI>
 		<LI><B>Show "Session:" label</B></LI>
 	</UL>
+	</LI>
 </UL>
 
 
@@ -134,17 +137,16 @@ The source code is distributed under the GPL. Please see
 <H2>Feedback</H2>
 
 <P>
-The preferred way to send bug reports is to use the
-<A HREF="http://sourceforge.net/tracker/?atid=565475&group_id=588&func=browse">
+The preferred way to send bug reports against specific plugins is to use the
+<A HREF="https://sourceforge.net/p/jedit/plugin-bugs/">
 jEdit Plugin Bugs Tracker</A> on Sourceforge:</P>
-<P>http://sourceforge.net/tracker/?atid=565475&group_id=588&func=browse</P>
+<p> There is a separate tracker for <a href="https://sourceforge.net/p/jedit/plugin-feature-requests/?limit=200">Plugin Feature Requests</a>. </p> 
 
 <P>
 You can also write to:
 </P>
 
 <UL>
-    <LI>Dirk M&ouml;bius <a href="mailto:dmoebius@gmx.net"><EM>&lt;dmoebius@gmx.net&gt;</EM></a>, or
     <LI>jEdit-users mailing-list <a href="mailto:jedit-users@lists.sourceforge.net"><EM>&lt;jedit-users@lists.sourceforge.net&gt;</EM></a>, or
     <LI>jEdit-devel mailing-list <a href="mailto:jedit-devel@lists.sourceforge.net"><EM>&lt;jedit-devel@lists.sourceforge.net&gt;</EM></a>.
 </UL>
