@@ -1,5 +1,6 @@
 Version 1.5.2 (Alan Ezust)
 - Fixed plugin-bug #1153 Sessions does not work with multiple views / buffersets:
+- Now uses "getPluginHome()" to determine where to store/load session data.
 
 VERSION 1.5.1 (Steve Jakob)
 - fixed bug (#2872914) using patch (#2886196) submitted by Steve Gough, where Unicode characters in file names were interpreted incorrectly when restoring a session
